none: preemtively initialize Timer to prevent freeze on macOS (TBC).